@@ -33,7 +33,6 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.41'
     implementation 'com.google.guava:guava:31.1-jre'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
-
 }
 
 test {
