@@ -2,5 +2,6 @@ package io.github.RevyaS.data.types;
 
 public enum QuestType {
     WALK_BLOCK,
+    BLOCK_DESTROY,
     NONE
 }
